--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 /* LEFT Section with Company Logo */ 
 
 .left {
-    flex-basis: 30%;
+    flex-basis: 33%;
 
     background-image: url(background.jpg);
     background-size: cover;
@@ -52,7 +52,26 @@ body {
 
 /* RIGHT Section with Form */ 
 .right {
-    padding: 30px;
-    flex-basis: 70%;
+    flex-basis: 67%;
+    background-color: rgb(240, 240, 240);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    font-family: sans-serif;
+}
+
+.right > div {
+    padding: 25px;
+}
+
+.intro {
+    margin-top: 10%;
+    font-size: 1;
+    font-weight: bold;
+}
+
+.formSection {
     background-color: white;
 }
