--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,10 @@ form > div {
     flex-basis: 50%;
 }
 
+label, input {
+    display: block;
+}
+
 
 label {
     color:#404040;
@@ -116,6 +120,10 @@ input:focus {
 
 input:focus-visible {
     outline: 0;
+}
+
+.error {
+    border: 1px solid #ff3737;
 }
 
 /* Bottom right section */
@@ -161,6 +169,10 @@ a {
 
     .company{
         margin: 0;
+    }
+
+    form > div {
+        flex-basis: 100%;
     }
 
 }
