--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ label {
     font-weight: 700;
     font-size: 0.5em;
     letter-spacing: 0.1rem;
+    margin-bottom: 2px;
 }
 
 input {
@@ -124,6 +125,26 @@ input:focus-visible {
 
 .error {
     border: 1px solid #ff3737;
+    margin-bottom: 0;
+}
+
+.validated {
+    border: 1px solid #596D48;
+    margin-bottom: 0;
+}
+
+#passwordErrorText {
+    margin: 0;
+    padding: 0;
+    font-size: 0.6rem;
+    color: #ff3737;
+}
+
+#passwordMatchText {
+    margin: 0;
+    padding: 0;
+    font-size: 0.6rem;
+    color: #596D48;
 }
 
 /* Bottom right section */
